{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 20,
  "lineage": "e400e9c8-8752-a669-3cdf-0751f73ce030",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b67c833d7997120",
            "arn": "arn:aws:ec2:eu-central-1:901536124823:elastic-ip/eipalloc-07b67c833d7997120",
            "domain": "vpc",
            "id": "eipalloc-07b67c833d7997120",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-157-114-98.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.157.114.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "url-shortener-nat-eip-develop"
            },
            "tags_all": {
              "Name": "url-shortener-nat-eip-develop"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:901536124823:internet-gateway/igw-0d71114beaf490921",
            "id": "igw-0d71114beaf490921",
            "owner_id": "901536124823",
            "tags": {
              "Name": "url-shortener-igw-develop"
            },
            "tags_all": {
              "Name": "url-shortener-igw-develop"
            },
            "vpc_id": "vpc-068dff02dda400cff"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b67c833d7997120",
            "association_id": "eipassoc-0bfd3d21fed899c77",
            "connectivity_type": "public",
            "id": "nat-000a1c817045c8685",
            "network_interface_id": "eni-0efab063535651007",
            "private_ip": "10.10.100.100",
            "public_ip": "18.157.114.98",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0aeea3673c5bb0196",
            "tags": {
              "Name": "url-shortener-nat-gw-develop"
            },
            "tags_all": {
              "Name": "url-shortener-nat-gw-develop"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:901536124823:route-table/rtb-028bd580820da4e01",
            "id": "rtb-028bd580820da4e01",
            "owner_id": "901536124823",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-000a1c817045c8685",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "url-shortener-private-rt-develop"
            },
            "tags_all": {
              "Name": "url-shortener-private-rt-develop"
            },
            "timeouts": null,
            "vpc_id": "vpc-068dff02dda400cff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:901536124823:route-table/rtb-0ff8f467c02b939ae",
            "id": "rtb-0ff8f467c02b939ae",
            "owner_id": "901536124823",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d71114beaf490921",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "url-shortener-public-rt-develop"
            },
            "tags_all": {
              "Name": "url-shortener-public-rt-develop"
            },
            "timeouts": null,
            "vpc_id": "vpc-068dff02dda400cff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013c765ab87454dab",
            "route_table_id": "rtb-028bd580820da4e01",
            "subnet_id": "subnet-0c6b81f52914929d7"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a325f08d8f742a08",
            "route_table_id": "rtb-028bd580820da4e01",
            "subnet_id": "subnet-0cc60b72553bc08dd"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e3561c8ea697a12",
            "route_table_id": "rtb-028bd580820da4e01",
            "subnet_id": "subnet-03b1845727598a959"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.gw",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011555234aaba9b9f",
            "route_table_id": "rtb-0ff8f467c02b939ae",
            "subnet_id": "subnet-0aeea3673c5bb0196"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053b1ce1b40239fcf",
            "route_table_id": "rtb-0ff8f467c02b939ae",
            "subnet_id": "subnet-05c08137191a77541"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02645dd2113b26a74",
            "route_table_id": "rtb-0ff8f467c02b939ae",
            "subnet_id": "subnet-02b611e511058ccaa"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:901536124823:subnet/subnet-0c6b81f52914929d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6b81f52914929d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901536124823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "url-shortener-develop-private-1"
            },
            "tags_all": {
              "Name": "url-shortener-develop-private-1"
            },
            "vpc_id": "vpc-068dff02dda400cff"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:901536124823:subnet/subnet-0cc60b72553bc08dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.104.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc60b72553bc08dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901536124823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "url-shortener-develop-private-2"
            },
            "tags_all": {
              "Name": "url-shortener-develop-private-2"
            },
            "vpc_id": "vpc-068dff02dda400cff"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:901536124823:subnet/subnet-03b1845727598a959",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.10.105.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b1845727598a959",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "901536124823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "url-shortener-develop-private-3"
            },
            "tags_all": {
              "Name": "url-shortener-develop-private-3"
            },
            "vpc_id": "vpc-068dff02dda400cff"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:901536124823:subnet/subnet-0aeea3673c5bb0196",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aeea3673c5bb0196",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "901536124823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "url-shortener-develop-public-1"
            },
            "tags_all": {
              "Name": "url-shortener-develop-public-1"
            },
            "vpc_id": "vpc-068dff02dda400cff"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:901536124823:subnet/subnet-05c08137191a77541",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c08137191a77541",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "901536124823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "url-shortener-develop-public-2"
            },
            "tags_all": {
              "Name": "url-shortener-develop-public-2"
            },
            "vpc_id": "vpc-068dff02dda400cff"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:901536124823:subnet/subnet-02b611e511058ccaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b611e511058ccaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "901536124823",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "url-shortener-develop-public-3"
            },
            "tags_all": {
              "Name": "url-shortener-develop-public-3"
            },
            "vpc_id": "vpc-068dff02dda400cff"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:901536124823:vpc/vpc-068dff02dda400cff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-05c93b8d14f63ac62",
            "default_route_table_id": "rtb-0df46f00b59343be6",
            "default_security_group_id": "sg-04ba6ab97e44df3b7",
            "dhcp_options_id": "dopt-7e12a414",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068dff02dda400cff",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df46f00b59343be6",
            "owner_id": "901536124823",
            "tags": {
              "Name": "url-shortener-vpc-develop"
            },
            "tags_all": {
              "Name": "url-shortener-vpc-develop"
            }
          }
        }
      ]
    }
  ]
}